--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,53 @@
-version: "3"
+version: "3.1"
 
 services:
+
+  rp:
+#    command: sleep 1000000000000
+    build:
+      context: .
+      dockerfile: Dockerfile-nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - nextc_letsencrypt:/etc/letsencrypt/
+      - nextc_nginx-rp:/etc/nginx/
+      - nextc_certbot:/var/www/certbot
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
+      - nextc_data:/var/www/
+    links:
+      - web
+    restart: always
+
+  certbot:
+    image: certbot/certbot
+    command: certonly --dry-run
+    volumes:
+      - nextc_certbot:/var/www/certbot
+      - nextc_letsencrypt:/etc/letsencrypt/
+
+  fpm:
+    build:
+      context: .
+      dockerfile: Dockerfile-fpm    
+    volumes:
+      - nextc_data:/var/www/
+      - nextc_fpm:/etc/php
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
+    links:
+      - db
+    depends_on:
+      - db
+    restart: always
+
+
   web:
     build:
       context: .
       dockerfile: Dockerfile-nextcloud
-    ports:
-      - "80:80"
-      - "443:443"
     volumes:
       - nextc_www:/var/www/
       - nextc_letsencrypt:/etc/letsencrypt/
@@ -29,12 +69,17 @@ services:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
     restart: always
+    secrets:
+      - db_pwd 
     environment:
-      MYSQL_ROOT_PASSWORD: secret-to-change
-      MYSQL_DATABASE: nextcloud_db
-      MYSQL_USER: nextcloud_user
-      MYSQL_PASSWORD: secret-to-change
+      MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db_pwd
+      MYSQL_DATABASE: owncloud
+      MYSQL_USER: ownc7
+      MYSQL_PASSWORD_FILE: /run/secrets/db_pwd
 
+secrets:
+  db_pwd:
+    file: ./db_pwd.txt
 
 volumes:
   nextc_www:
@@ -43,3 +88,8 @@ volumes:
   nextc_db:
   nextc_db_backup:
   nextc_log_web:
+  nextc_nginx-rp:
+  nextc_certbot:
+  nextc_fpm:
+  nextc_data:
+
