--- a/df-nextcloud/Dockerfile
+++ b/df-nextcloud/Dockerfile
@@ -8,7 +8,7 @@ COPY	./apache-entrypoint.sh /
 
 RUN 	apt-get update && apt-get upgrade -y
 
-RUN	apt-get install -y --no-install-recommends --no-install-suggests apache2 libapache2-mod-php7.0 libapache2-modsecurity \ 
+RUN	apt-get install -y apache2 libapache2-mod-php7.0 libapache2-modsecurity \ 
 		curl ca-certificates openssl wget bzip2 php7.0-gd php7.0-json php7.0-mysql php7.0-curl php7.0-mbstring \
 		php7.0-intl php7.0-mcrypt php-imagick php7.0-xml php7.0-zip \
 		php7.0-curl php-mime-type php7.0-bz2 php7.0-intl php7.0-mcrypt php-imagick php7.0-cli
