Limit number of RUN items

--- a/df-rp/Dockerfile
+++ b/df-rp/Dockerfile
@@ -1,15 +1,9 @@
 FROM nginx:1.13
 
-
-RUN apt-get update && apt-get upgrade -y
-
-RUN apt-get install -y --no-install-suggests nginx-extras
-
-RUN apt-get purge -y --auto-remove
-
-RUN rm -rf /var/lib/apt/lists/*
-
-
+RUN apt-get update && apt-get upgrade -y \
+  apt-get install -y --no-install-suggests nginx-extras \
+  apt-get purge -y --auto-remove \
+  rm -rf /var/lib/apt/lists/*
 
 VOLUME /etc/letsencrypt/
 VOLUME /etc/nginx/
