--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,15 @@ version: "3.1"
 services:
 
   rp:
-    image: dockerownc_rp
+    image: leschard/rp
 #    build:
 #      context: .
 #      dockerfile: Dockerfile-nginx
+    deploy:
+      resources:
+        limits:
+          cpus: '2'
+          memory: 100M
     ports:
       - "80:80"
       - "443:443"
@@ -18,10 +23,15 @@ services:
 
 
   web:
-    image: dockerownc_web
+    image: leschard/nextcloud
 #    build:
 #      context: .
 #      dockerfile: Dockerfile-nextcloud
+    deploy:
+      resources:
+        limits:
+          cpus: '3'
+          memory: 500M
     volumes:
       - nextc_www:/var/www/
       - nextc_letsencrypt:/etc/letsencrypt/
@@ -34,6 +44,11 @@ services:
 
   db:
     image: mariadb:10.1
+    deploy:
+      resources:
+        limits:
+          cpus: '3'
+          memory: 200M
     volumes:
       - nextc_db:/var/lib/mysql/
       - nextc_db_backup:/srv/
