--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       update_config:
         order: start-first
         failure_action: rollback
+      restart_policy:
+        condition: on-failure
     ports:
       - "80:80"
       - "443:443"
@@ -24,6 +26,12 @@ services:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
       - nextc_certbot_root:/var/www/
+#    healthcheck:
+#      test: ["CMD", "curl", "-f", "http://localhost"]
+    networks:
+      - nc_net
+      - int_net
+
 
   web:
     image: leschard/nextcloud
@@ -44,9 +52,11 @@ services:
       - /etc/localtime:/etc/localtime:ro
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost"]
+    networks:
+      - nc_net
 
   db:
-    image: mariadb:10.1
+    image: mariadb:10.3
     deploy:
       resources:
         limits:
@@ -64,6 +74,14 @@ services:
       MYSQL_DATABASE: owncloud
       MYSQL_USER: ownc7
       MYSQL_PASSWORD_FILE: /run/secrets/db_pwd
+    networks:
+      - nc_net
+
+networks:
+  int_net:
+    external:
+      name: int_net
+  nc_net: 
 
 secrets:
   db_pwd:
