--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,6 @@ services:
 
   rp:
     image: leschard/rp
-#    build:
-#      context: .
-#      dockerfile: Dockerfile-nginx
     deploy:
       resources:
         limits:
@@ -35,9 +32,6 @@ services:
 
   web:
     image: leschard/nextcloud
-#    build:
-#      context: .
-#      dockerfile: Dockerfile-nextcloud
     deploy:
       resources:
         limits:
@@ -85,6 +79,56 @@ services:
       test: ["CMD", "mysqladmin", "ping", "-u", "root", "-p$$(cat /var/run/secrets/db_pwd)"]
 
 
+  web-nc:
+    image: nextcloud:15
+    deploy:
+      resources:
+        limits:
+          cpus: '3'
+          memory: 400M
+      update_config:
+        order: start-first
+        failure_action: rollback
+      restart_policy:
+        condition: on-failure
+    volumes:
+      - data:/var/www/html/data/
+      - apps:/var/www/html/apps/
+      - config:/var/www/html/config/
+      - etc_apache2:/etc/apache2/
+      - log_web:/var/log/
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost"]
+    networks:
+      - nc_net
+      - int_net
+
+  db-nc:
+    image: mariadb:10.4
+    deploy:
+      resources:
+        limits:
+          cpus: '3'
+          memory: 300M
+    volumes:
+      - db:/var/lib/mysql/
+      - db_backup:/srv/
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
+    secrets:
+      - db_pwd 
+    environment:
+      MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db_pwd
+      MYSQL_DATABASE: owncloud
+      MYSQL_USER: ownc7
+      MYSQL_PASSWORD_FILE: /run/secrets/db_pwd
+    networks:
+      - nc_net
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-u", "root", "-p$$(cat /var/run/secrets/db_pwd)"]
+
 networks:
   int_net:
     external:
@@ -105,3 +149,10 @@ volumes:
   nextc_nginx-rp:
   nextc_fpm:
   nextc_certbot_root:
+  data:
+  apps:
+  config:
+  etc_apache2:
+  db:
+  db_backup:
+  log_web:
