feat: add memory reservation for RP

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.4"
+version: "3.7"
 
 services:
 
@@ -8,12 +8,16 @@ services:
       resources:
         limits:
           cpus: '2'
-          memory: 100M
+          memory: 60M
+        reservations:
+          memory: 60M
       update_config:
         order: start-first
         failure_action: rollback
       restart_policy:
         condition: on-failure
+        max_attempts: 5
+        delay: 3s
     ports:
       - "80:80"
       - "443:443"
