--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
           memory: 60M
         reservations:
           memory: 60M
+          cpus: '0.25'
       update_config:
         order: start-first
         failure_action: rollback
@@ -43,6 +44,7 @@ services:
           memory: 200M
         reservations:
           memory: 200M
+          cpus: '0.25'
       update_config:
         order: start-first
         failure_action: rollback
@@ -71,6 +73,7 @@ services:
           memory: 200M
         reservations:
           memory: 200M
+          cpus: '0.25'
     volumes:
       - nextc_db:/var/lib/mysql/
       - nextc_db_backup:/srv/
