--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 ---
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
+    rev: v3.2.0
     hooks:
       - id: check-yaml
       - id: end-of-file-fixer
@@ -13,11 +13,7 @@ repos:
       - id: check-symlinks
       - id: check-json
 
-  - repo: https://github.com/Lucas-C/pre-commit-hooks-go
-    rev: v1.0.1
+  - repo: https://github.com/adrienverge/yamllint
+    rev: v1.24.2
     hooks:
-      - id: checkmake
-  - repo: https://github.com/shellcheck-py/shellcheck-py
-    rev: v0.7.1.1
-    hooks:
-      - id: shellcheck
+      - id: yamllint
