--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
 
   rp:
-    image: leschard/rp
+    image: nginx:1.19
     deploy:
       resources:
         limits:
@@ -89,8 +89,9 @@ services:
     networks:
       - nc_net
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-u", "root", "-p$$(cat /var/run/secrets/db_pwd)"]
-
+      test: >
+        ["CMD", "mysqladmin", "ping",
+        "-u", "root", "-p$$(cat /var/run/secrets/db_pwd)"]
 
 #  web-nc:
 #    image: nextcloud:15
@@ -140,7 +141,9 @@ services:
 #    networks:
 #      - nc_net
 #    healthcheck:
-#      test: ["CMD", "mysqladmin", "ping", "-u", "root", "-p$$(cat /var/run/secrets/db_pwd)"]
+#      test: >
+#        ["CMD", "mysqladmin", "ping",
+#        "-u", "root", "-p$$(cat /var/run/secrets/db_pwd)"]
 
 networks:
   int_net:
