--- a/df-web/Dockerfile
+++ b/df-web/Dockerfile
@@ -9,7 +9,7 @@ COPY ./apache-entrypoint.sh /
 RUN apt-get update \
     && apt-get install -y --no-install-recommends apache2 libapache2-mod-php libapache2-mod-security2 \
     curl ca-certificates openssl wget bzip2 php-gd php-json php-mysql php-curl php-mbstring \
-    php-intl php-imagick php-xml php-zip php-bcmath php-gmp \
+    php-intl php-imagick php-xml php-zip php-bcmath php-gmp php-apcu php-redis \
     php-curl php-mime-type php-bz2 php-intl php-imagick php-cli \
     && apt-get purge -y --auto-remove \
     && rm -rf /var/lib/apt/lists/*
