feat: add ressource limits on redis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,6 +100,17 @@ services:
 
   redis:
     image: 'bitnami/redis:6.0'
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 50M
+        reservations:
+          memory: 200M
+          cpus: '0.5'
+      update_config:
+        order: start-first
+        failure_action: rollback
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
     volumes:
